tests-integration/tests/roundtrip/invalid/syntax/malformed_line/03/input.essence
find >=lex,b,c: int(1..3)
